fixed overlapping issue

--- a/www/CSS/resto.css
+++ b/www/CSS/resto.css
@@ -83,10 +83,10 @@ body{
 
 .dagSelectie h1 {
     width:15%;
-    margin: 0 2.5%;
+    margin: 0.2% 2.5%;
     text-align: center;
     font-family: Title;
-    font-size: 1.5em;
+    font-size: 125%;
     color: rgb(105, 103, 101);
 }
 
